--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 			<script src="assets/js/smooth-scroll.polyfills.min.js"></script>
 			<script>
 				// Instantiate Scrolls
-				var scroll = new SmoothScroll('a[href*="#"]:not([data-easing])');
+				var scroll = new SmoothScroll('a[href*="#"]');
 			</script>
 
 	</body>
