--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 								<section>
 									<ul class="social">
 										<!-- <li>
-											<a class="icon fa-twitter" href="https://twitter.com/nco323">
+											<a class="icon fa-twitter" href="https://twitter.com/******">
 												<span class="label">Twitter</span>
 											</a>
 										</li> -->
